--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,7 +12,10 @@ Metrics/MethodLength:
 Metrics/AbcSize:
   Enabled: false
 
+Layout/LineLength:
+  Max: 120
+
 AllCops:
-  TargetRubyVersion: 2.7
+  TargetRubyVersion: 3.0
   SuggestExtensions: false
   NewCops: enable
